--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -143,8 +143,9 @@
     - name: "**09:00-09:15** Housekeeping and Announcements."
     - name: "**09:15-13:00** Group Exercises"
     - name: "**13:00-14:00** Lunch"
-    - name: "**14:00-16:30** Group Exercises"
-    - name: "**16:30-18:00** Invited Talk"
+    - name: "**14:00-16:00** Group Exercises"
+    - name: "**16:00-18:00** SICSS-Africa + African Descendants Inaugural Joint Panel (with: 
+<a href='https://sicss.io/2022/jias' target='_blank'>SICSS-JIAS/IPATC</a>, <a href='https://sicss.io/2022/west-central-africa/' target='_blank'>SICSS-West/Central Africa</a>, & <a href='https://sicss.io/2022/howard-mathematica/' target='_blank'>SICSS-Howard/Mathematica</a>): Interrogating Data Collection Methods Focused on African and African Descendents Around the World: Problems, Realities, And Future Opportunities"
     - name: "**18:00-** Dinner"
 
 - date: 2022-06-28
