--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -35,7 +35,7 @@
     - name: "**10:30-12:00** North and South: *Naming practices and the hidden dimension of global disparities in knowledge production.*
     <br/> 
     <br/> 
-    <p align='justify'>Contemporary social sciences aim to be diverse and inclusive, yet traces of historical supremacy persist in scientific practices. One such practice is geographical references in article titles. This presentation will highlight important North-South gaps in knowledge production using more than half a million social science research articles indexed by Scopus (1996 to 2020).</p>"
+    Contemporary social sciences aim to be diverse and inclusive, yet traces of historical supremacy persist in scientific practices. One such practice is geographical references in article titles. This presentation will highlight important North-South gaps in knowledge production using more than half a million social science research articles indexed by Scopus (1996 to 2020)."
     
     - name: "**12:00-13:00** Tutorials"
     - name: "**13:00-14:00** Lunch"
@@ -64,7 +64,7 @@
     - name: "**10:30-12:00** Can a 280-character message explain stock returns? *Evidence from South Africa.*
     <br/> 
     <br/> 
-    <p align='justify'>The role of investor sentiment in financial markets has been acknowledged in the literature. In particular, previous work suggests that noise traders are often driven by sentiment rather than fundamental information. This presentation will uncover the link between tweet features and market features using 140 South African companies and a dataset of firm-level Twitter messages extracted from Bloomberg from 1 January 2015 to 31 March 2020.</p>"
+    The role of investor sentiment in financial markets has been acknowledged in the literature. In particular, previous work suggests that noise traders are often driven by sentiment rather than fundamental information. This presentation will uncover the link between tweet features and market features using 140 South African companies and a dataset of firm-level Twitter messages extracted from Bloomberg from 1 January 2015 to 31 March 2020."
     
     - name: "**12:00-13:00** Tutorials
     
@@ -148,7 +148,17 @@
 <a href='https://sicss.io/2022/jias' target='_blank'>SICSS-JIAS/IPATC</a>, <a href='https://sicss.io/2022/west-central-africa/' target='_blank'>SICSS-West/Central Africa</a> & <a href='https://sicss.io/2022/howard-mathematica/' target='_blank'>SICSS-Howard/Mathematica</a>): **Interrogating Data Collection Methods Focused on African and African Descendents Around the World:** *Problems, Realities, And Future Opportunities.* 
     <br/> 
     <br/> 
- <p align='justify'>For Development interventions to solve current and future crises data must be reliable and of high quality. The reality is, concerns about data validity pose a significant bottleneck for generating theoretical insights into the complexity of issues peculiar to peoples of Africa and the African diaspora. Previous attempts at circumventing data challenges in Africa have relied on surveys, estimates, or models that often do not reflect the reality in many African countries. In order to have a robust discussion, certain questions must be asked:  What challenges exist in the collection of precise data?  How do these challenges affect how poverty indices and reports are generated? What can stakeholders do to improve data quality?  What unique tools are available to collect more precise data that includes the perspectives of the communities studied? This panel will discuss key challenges in the collection of precise data as well as how these challenges influence how African and African diaspora populations are studied and economic indices are generated. The panelists will draw from their unique expertise and experiences working with different forms of data to critically reflect/challenge current data collection methods, while highlighting innovative strategies for collecting data about Africans and the African diaspora.</p>"
+ For Development interventions to solve current and future crises data must be reliable and of high quality. The reality is, concerns about data validity pose a significant bottleneck for generating theoretical insights into the complexity of issues peculiar to peoples of Africa and the African diaspora. Previous attempts at circumventing data challenges in Africa have relied on surveys, estimates, or models that often do not reflect the reality in many African countries. In order to have a robust discussion, certain questions must be asked: 
+ 
+ - What challenges exist in the collection of precise data?  
+ 
+ - How do these challenges affect how poverty indices and reports are generated? 
+ 
+ - What can stakeholders do to improve data quality?  
+ 
+ - What unique tools are available to collect more precise data that includes the perspectives of the communities studied? 
+ 
+ This panel will discuss key challenges in the collection of precise data as well as how these challenges influence how African and African diaspora populations are studied and economic indices are generated. The panelists will draw from their unique expertise and experiences working with different forms of data to critically reflect/challenge current data collection methods, while highlighting innovative strategies for collecting data about Africans and the African diaspora."
     - name: "**18:00-** Dinner"
 
 - date: 2022-06-28
