--- a/_data/2022/covenant-university/participants.yml
+++ b/_data/2022/covenant-university/participants.yml
@@ -1,1 +1,12 @@
-- name:
+- name: Julius Ajayi
+  image: /assets/images/JOAjayi.jpg
+  bio: "<p align='justify'>Julius Ajayi is a PhD candidate in the Department of Transport Management at the Ladoke Akintola University of Technology, Nigeria. He is also a Research Associate at the Centre for Economic Policy and Development Research (CEPDeR), Nigeria. His research interests include Transport Equity, Policy Development and Sustainability. His Doctoral thesis focuses on the disparities in access to public transportation among population groups in a sub-Sahara African urban centre. Between 2016 and 2019, Julius led data-driven education advocacy across three geopolitical zones in Nigeria.</p>"
+  website: https://scholar.google.com/citations?hl=en&user=XcHpoAoAAAAJ
+  
+- name: Marvellous Ngundu
+  image: /assets/images/MNgundu.jpg
+  bio: "<p align='justify'>Marvellous Ngundu is a Postdoctoral Research Fellow in economics at the University of KwaZulu Natal (UKZN) in South Africa, a Research Assistant at the UKZN's Macroeconomics Research Unit (MRU), and a Research Fellow at Covenant University's Center for Economic Policy and Development Research (CEPDeR) in Nigeria. His primary research interests include China-Africa economic engagement, and international and development economics.</p>"
+  
+- name: Damian Kalu	Ude
+  image: /assets/images/UDamian.jpg
+  bio: "<p align='justify'>Ude Damian Kalu is a lecturer in the Department of Economics, Michael Okpara University of Agriculture, Umudike, Nigeria. He holds a PhD from the University of Nigeria, Nsukka. He has a research interest in Econometrics, Finance and Public Sector Economics. He is a member of the Econometric Society and also a Research Fellow at the Centre for Economic Policy and Development Research (CEPDeR), Covenant University.</p>"
