Added a few participants

--- a/_data/2022/rutgers/participants.yml
+++ b/_data/2022/rutgers/participants.yml
@@ -56,14 +56,14 @@
   bio: "Qiyao Pan is a doctoral student in sociology at CUNY Graduate Center. She is also affliated with CUNY Institute for Demographic Research (CIDR). With her broad interests in urban sociology, spatial demography, migration and computational methods, her current research examines the neighborhood effect on restaurant closings using spatial analysis."
   
 - name: George Quinn 
-  image: 
-  bio: 
-  website: 
+  image: /assets/images/sicss22_quinn_george.png
+  bio: "George D. Quinn is a Ph.D. student studying Political Science at Rutgers University. His research areas include a focus on American Politics and political behavior, such as analyzing age or race as factors in voter turnout. A graduate of Stockton University in Southern New Jersey, George focused his undergraduate research on quantitative methods serving as the primary teaching assistant for two semesters for the campus's political methods course. Lastly, George has maintained a secondary interest in Holocaust & Genocide research, focusing on Jewish-American refugee resettlement and immigration patterns. George has made several presentations on this topic on behalf of the Stockton University Holocaust Resource Center."
+  website: https://twitter.com/GeorgeDQuinn
 
 - name: Casey Randazzo 
-  image: 
-  bio: 
-  website: 
+  image: sicss22_randazzo_casey.jpg
+  bio: "Casey Randazzo is a doctoral student at Rutgers University School of Communication and Information Science. Casey investigates emotional contagion in online collectives in their efforts to promote or resist social change."
+  website: https://twitter.com/caseyrandazzo
   
 - name: Huma Rasheed
   image: /assets/images/sicss22_rasheed_huma.jpg
@@ -76,9 +76,9 @@
   website: https://www.polisci.rutgers.edu/cb-profile/andreyt 
 
 - name: Alice Timken
-  image: 
-  bio: 
-  website: 
+  image: sicss22_timken_alice.png
+  bio: "Alice is a Ph.D. student in comparative politics and law and courts at the Maxwell School at Syracuse University studying institutions, judicial behavior, and access to justice in democracies."
+  website: https://twitter.com/alicetimken
   
 - name: Anthony Vanky
   image: /assets/images/sicss22_vanky_anthony.jpg
