--- a/_data/2022/rutgers/participants.yml
+++ b/_data/2022/rutgers/participants.yml
@@ -71,7 +71,7 @@
   website: https://www.communication.udel.edu/people/huma#biography
   
 - name: Lina Saud
-  image: /assets/images/sicss22_saud_lina.HEIC
+  image: /assets/images/sicss22_saud_lina.png
   bio: "Lina Saud recently received her PhD in social psychology at Rutgers University and will begin working as a postdoctoral researcher with Dr. Rezarta Bilali at New York University this fall. Her research examines the influence of narratives on various social issues including responses to collective blame, attitudes toward immigrants, and support for contemporary protest movements."
   website: https://www.polisci.rutgers.edu/cb-profile/andreyt 
 
